[package]
name = "rusty-ghost"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rusty-ghost"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.4.7", features = ["derive"] }
hex = "0.4.3"
http = "0.2.9"
hyper = "0.14.27"
indexmap = "2.0.2"
log = "0.4.20"
simplelog = "0.12.1"
simple_proxy = "1.3.4"
tokio = { version = "1.33.0", features = ["full"] }
typed-builder = "0.18.0"
urlencoding = "2.1.3"
