[package]
name = "rusty-ghost"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rusty-ghost"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1.74"
clap = { version = "4.4.7", features = ["derive"] }
hex = "0.4.3"
http = "0.2.9"
hudsucker = { version = "0.21.0", default-features = false, features = [
  "rcgen-ca",
  "rustls-client",
] }
hyper = "0.14.27"
hyper-rustls = "0.24.2"
indexmap = "2.0.2"
log = "0.4.20"
rustls = { version = "0.21.10", features = ["dangerous_configuration"] }
rustls-pemfile = "2.0.0"
simplelog = "0.12.1"
time = "0.3.30"
tokio = { version = "1.35.0", features = ["full"] }
typed-builder = "0.18.0"
urlencoding = "2.1.3"
